--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,22 @@
-body{
+/* Importando fonte que vai ser usada no site*/
+@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Reddit+Mono:wght@200..900&display=swap');
+
+/*Configurações de todo o documento*/
+*{
     padding: 0;
     margin: 0;
+    font-family: "Josefin Sans", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    --primary-background-color: #001436;
+    --primary-font-color: #bfcce3;
 }
+html{
+    font-size: 10px;
+}
+
+/*Estilizando e animando o preloader*/
 #preloader {
     background: url(../assets/img/preloader/whale.gif) no-repeat center center;
-
     height: 100vh;
     width: 100%;
     position: fixed;
@@ -19,57 +31,158 @@ body{
     100% { background-color: rgb(21, 15, 54); }
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-header {
+/*Estilando o menu de navegação*/
+#header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #ffffff;
+    background-color: var(--primary-background-color);
+    font-size: 1.6rem;
+    
 }
 
 #logo {
-    width: 70px;
+    width: 6rem;
+    max-width: 100%; /* Logo nunca excede o tamanho do contêiner */
+    height: auto;
 }
 
 .navbar {
-    flex-grow: 1;
+    display: flex;
+    justify-content: space-around;
     text-align: right;
 }
 
-.navlinks {
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 8vh;
+}
+
+.mobile-menu{
+    cursor: pointer;
+    display: none;
+}
+.mobile-menu div{
+    width: 32px;
+    height: 2px;
+    margin: 8px;
+    background-color: #fff;
+}
+
+.nav-list {
+    list-style: none;
     display: flex;
-    justify-content: flex-end;
-}
-
-.navlist {
-    margin: 0 10px;
-}
-
-.navlist a {
-    color: #160667;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-list li {
+    letter-spacing: 3px;
+    margin-left: 32px;
+  }
+  .navlink a{
     text-decoration: none;
-    padding: 10px;
-    transition: background-color 0.3s ease;
+    color: var(--primary-font-color);
+  }
+  .video-container {
+    position: relative;
 }
 
-.navlist a:hover {
-    background-color: #1A2A6C;
-    border-radius: 5px;
+.video-container video {
+    width: 100%;
+    height: auto;
 }
 
-video{
-    width:100%;
+.text-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    padding: 20px;
+    max-width: 80%;
 }
 
+.text-overlay h1 {
+    font-size: 4rem;
+    margin-bottom: 20px;
+}
+
+.text-overlay p {
+    font-size: 2rem;
+}
 footer {
     text-align: center;
     padding: 20px;
     background-color: #0C143E;
     color: #fff;
 }
+
+  /*Adequação às telas do tablet*/
+  @media (max-width: 768px) {
+    body {
+      overflow-x: hidden;
+      font-size: clamp(1.2rem, 1rem + 2vw, 1.57rem);
+    }
+    #logo{
+        width: 4.2rem;
+    }
+    .nav-list {
+      position: absolute;
+      top: 10vh;
+      right: 0;
+      width: 50vw;
+      height: 92vh;
+      background-color: #001436;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in;
+    }
+    .nav-list li {
+      margin-left: 0;
+      opacity: 0;
+    }
+    .mobile-menu {
+      display: block;
+    }
+  }
+  
+  .nav-list.active {
+    transform: translateX(0);
+  }
+  
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
+
+    /*Adequação às telas do celular*/
+    @media (max-width: 480px) {
+        #logo{
+            width: 3rem;
+        }
+    }
