--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,23 +97,25 @@ nav {
 }
 
 .text-overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-    padding: 20px;
-    max-width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: rgb(255, 255, 255);
+  padding: 20px;
+  max-width: 80%;
+  font-weight: bold;
+  background-color: rgba(0, 20, 54, 0.4);
 }
 
 .text-overlay h1 {
-    font-size: 4rem;
-    margin-bottom: 20px;
+  font-size: 8rem;
+  margin-bottom: 20px;
 }
 
 .text-overlay p {
-    font-size: 2rem;
+  font-size: 3rem;
 }
 footer {
     text-align: center;
