--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
 .container {
     display: flex;
     justify-content: center;
@@ -14,6 +17,7 @@ body {
     height: 130vh;
     background-color: #ecf0f1;
 }
+
 .content {
     background-color: #fff;
     border-radius: 15px;
@@ -23,6 +27,7 @@ body {
     align-items: center;
     position: relative;
 }
+
 .content::before {
     content: "";
     position: absolute;
@@ -33,29 +38,36 @@ body {
     border-bottom-left-radius: 15px;
     left: 0;
 }
+
 .title {
     font-size: 28px;
     font-weight: bold;
     text-transform: capitalize;
     margin-top: 20px;
 }
+
 .title-primary {
     color: #ffffff;
 }
+
 .title-second {
     color: #000a8f;
 }
+
 .description {
     font-size: 14px;
     font-weight: 300;
     line-height: 30px;
 }
+
 .description-primary {
     color: #ffffff;
 }
+
 .description-second {
     color: #7f8c8d;
 }
+
 .btn {
     border-radius: 15px;
     text-transform: uppercase;
@@ -70,22 +82,26 @@ body {
     margin-top: 1rem;
     text-decoration: none;
 }
+
 .btn-primary {
     background-color: transparent;
     border: 1px solid #000;
     transition: background-color .5s;
 }
+
 .btn-primary:hover {
     background-color: #320081;
     color: #000;
 }
+
 .btn-second {
     background-color: #2a0077;
     border: 1px solid #000;
     transition: background-color .5s;
-    
+
 }
-.btn-second a{
+
+.btn-second a {
     text-decoration: none;
     color: white;
 }
@@ -95,33 +111,41 @@ body {
     border: 1px solid #000;
     color: #000;
 }
+
 .first-content {
     display: flex;
 }
+
 .first-content .second-column {
     z-index: 11;
 }
+
 .first-column {
     text-align: center;
     width: 40%;
     z-index: 10;
 }
+
 .second-column {
     width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .social-media {
     margin: 1rem 0;
 }
-.link-social-media:not(:first-child){
+
+.link-social-media:not(:first-child) {
     margin-left: 10px;
 }
+
 .link-social-media .item-social-media {
     transition: background-color .5s;
 }
-.link-social-media:hover .item-social-media{
+
+.link-social-media:hover .item-social-media {
     background-color: #090033;
     color: #ffffff;
     border-color: #0a0068;
@@ -131,6 +155,7 @@ body {
     display: flex;
     list-style-type: none;
 }
+
 .item-social-media {
     border: 1px solid #bdc3c7;
     border-radius: 50%;
@@ -140,28 +165,32 @@ body {
     text-align: center;
     color: #95a5a6;
 }
+
 .form {
     display: flex;
     flex-direction: column;
     width: 55%;
 }
+
 .form input {
     height: 45px;
     width: 100%;
     border: none;
     background-color: #ecf0f1;
 }
-input:-webkit-autofill 
-{    
+
+input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px #ecf0f1 inset !important;
     -webkit-text-fill-color: #000 !important;
 }
+
 .label-input {
     background-color: #ecf0f1;
     display: flex;
     align-items: center;
     margin: 8px;
 }
+
 .icon-modify {
     color: #7f8c8d;
     padding: 0 5px;
@@ -173,20 +202,24 @@ input:-webkit-autofill
     position: absolute;
     display: flex;
 }
+
 .second-content .first-column {
     order: 2;
     z-index: -1;
 }
+
 .second-content .second-column {
     order: 1;
     z-index: -1;
 }
+
 .password {
     color: #34495e;
     font-size: 14px;
     margin: 15px 0;
     text-align: center;
 }
+
 .password::first-letter {
     text-transform: capitalize;
 }
@@ -200,6 +233,7 @@ input:-webkit-autofill
 .sign-in-js .second-content .second-column {
     z-index: 11;
 }
+
 .sign-in-js .second-content .first-column {
     z-index: 13;
 }
@@ -210,13 +244,15 @@ input:-webkit-autofill
     border-bottom-left-radius: 0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    animation: slidein 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
+    animation: slidein 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
 
     z-index: 12;
 }
 
 .sign-up-js .content::before {
-    animation: slideout 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
+    animation: slideout 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
 
     z-index: 12;
 }
@@ -231,7 +267,7 @@ input:-webkit-autofill
 }
 
 .sign-up-js .first-content .first-column {
-    z-index: 13;    
+    z-index: 13;
 }
 
 
@@ -240,13 +276,15 @@ input:-webkit-autofill
 
     z-index: -1;
     position: relative;
-    animation: deslocamentoEsq 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
+    animation: deslocamentoEsq 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
 }
 
 .sign-up-js .second-content .second-column {
     position: relative;
     z-index: -1;
-    animation: deslocamentoDir 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
+    animation: deslocamentoDir 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
 }
 
 /*ANIMAÇÃOO CSS PARA O CONTEÚDO*/
@@ -375,6 +413,7 @@ input:-webkit-autofill
         top: 0;
         border-radius: 0;
     }
+
     .first-content, .second-content {
         flex-direction: column;
         justify-content: space-around;
@@ -383,7 +422,7 @@ input:-webkit-autofill
     .first-column, .second-column {
         width: 100%;
     }
-    
+
     .sign-in-js .content::before {
         top: 60%;
         left: 0;
@@ -394,7 +433,7 @@ input:-webkit-autofill
     .form {
         width: 90%;
     }
-    
+
     /* ANIMAÇÃO MOBILE CSS*/
 
     @keyframes deslocamentoEsq {
@@ -404,109 +443,109 @@ input:-webkit-autofill
             opacity: 1;
             z-index: 12;
         }
-    
+
         25% {
             top: -80px;
             opacity: .5;
             /* z-index: 12; NÃO HÁ NECESSIDADE */
         }
-    
+
         50% {
             top: -100px;
             opacity: .2;
             /* z-index: 12; NÃO HÁ NECESSIDADE */
         }
-    
+
         to {
             top: -110px;
             opacity: 0;
             z-index: -1;
         }
     }
-    
-    
+
+
     @keyframes deslocamentoDir {
-    
+
         from {
             top: 0;
             z-index: 12;
         }
-    
+
         25% {
             top: 80px;
             /* z-index: 12;  NÃO HÁ NECESSIDADE*/
         }
-    
+
         50% {
             top: 100px;
             /* z-index: 12; NÃO HÁ NECESSIDADE*/
             /* background-color: yellow;  Exemplo que dei no vídeo*/
         }
-    
+
         to {
             top: 110px;
             z-index: -1;
         }
     }
-    
-    
-    
+
+
+
     @keyframes slidein {
-    
+
         from {
             top: 0;
             height: 40%;
         }
-    
+
         25% {
             top: 5%;
             height: 50%;
         }
-    
+
         50% {
             top: 25%;
             height: 60%;
         }
-    
+
         75% {
             top: 45%;
             height: 50%;
         }
-    
+
         to {
             top: 60%;
             height: 40%;
         }
     }
-    
+
     @keyframes slideout {
-    
+
         from {
             top: 60%;
             height: 40%;
         }
-    
+
         25% {
             top: 45%;
             height: 50%;
         }
-    
+
         50% {
             top: 25%;
             height: 60%;
         }
-    
+
         75% {
             top: 5%;
             height: 50%;
         }
-    
+
         to {
             top: 0;
             height: 40%;
         }
     }
-   
+
 }
 
 @media screen and (max-width: 740px) {
